src/app.scss
@use '@fontsource-variable/biorhyme';
@use '@fontsource-variable/libre-franklin';

@use 'mixins.scss' as *;

:root {
	// Fonts
	--font-brand: 'BioRhyme Variable', serif;
	--font-plain: 'Libre Franklin Variable', sans-serif;
	// Font weights
	--font-weight-thin: 300;
	--font-weight-regular: 400;
	--font-weight-medium: 500;
	--font-weight-semi-bold: 600;

	// Color theme
	--color-primary: #00443B;
	--color-on-primary: #FFFFFF;
	--color-primary-container: #1F6A5D;
	--color-on-primary-container: #FFFFFF;
	--color-secondary: #37524E;
	--color-on-secondary: #FFFFFF;
	--color-secondary-container: #5B7772;
	--color-on-secondary-container: #FFFFFF;
	--color-tertiary: #615E57;
	--color-on-tertiary: #FFFFFF;
	--color-tertiary-container: #F0EAE1;
	--color-on-tertiary-container: #4F4C46;
	--color-error: #BA1A1A;
	--color-on-error: #FFFFFF;
	--color-surface: #EDE7DE;
	--color-surface-variant: #CEEAD2;
	--color-surface-container: #FFFFFF;
	--color-surface-container-high: #EBE7E7;
	--color-on-surface: #1C1B1B;
	--color-on-primary-opacity-32: rgba(255, 255, 255, 0.32);
	--color-on-primary-opacity-40: rgba(255, 255, 255, 0.4);
	--color-surface-container-opacity-30: rgba(255, 255, 255, 0.3);
	--color-surface-container-opacity-80: rgba(255, 255, 255, 0.8);
	--color-extra-paper-status: #E9AC1E;
	--color-extra-cockard: #F80F0F;
	--color-extra-on-cockard: #FFFFFF;
	--color-extra-backdrop: rgba(244, 243, 240, .8);
	--color-extra-on-backdrop: #FFFFFF;
	--color-extra-overlay: rgba(0, 0, 0, 0.25);

	// Dimensions
	--2px: 2px;
	--4px: 4px;
	--5px: 5px;
	--6px: 6px;
	--8px: 8px;
	--10px: 10px;
	--11px: 11px;
	--12px: 12px;
	--14px: 14px;
	--16px: 16px;
	--18px: 18px;
	--20px: 20px;
	--22px: 22px;
	--24px: 24px;
	--28px: 28px;
	--32px: 32px;
	--36px: 36px;
	--42px: 42px;
	--45px: 45px;
	--48px: 48px;
	--64px: 64px;
	--80px: 80px;

	--zindex-nav: 1000;
	--zindex-contacts: 2000;

	--max-width: 1800px;
	--contacts-width: 320px;
	--card-max-width: 950px;
	--header-max-width: 900px;

	// TODO: Make spacing responsive
	--spacing-xxs: calc(7px);
	--spacing-xs: calc(14px);
	--spacing-s: calc(21px);
	--spacing-m: calc(24px);
	--spacing-l: calc(42px);
	--spacing-xl: calc(64px);
	--spacing-xxl: calc(130px);
	/* --min-screen-width: 375px;
	--max-screen-width: 1600px;
	--screen-size-rateo: calc((100vw - var(--min-screen-width)) / (var(--max-screen-width) - var(--min-screen-width)));
	--spacing-xxs: calc(7px + (7px * var(--screen-size-rateo)));
	--spacing-xs: calc(14px + (14px * var(--screen-size-rateo)));
	--spacing-s: calc(21px + (21px * var(--screen-size-rateo)));
	--spacing-m: calc(24px + (24px * var(--screen-size-rateo)));
	--spacing-l: calc(42px + (42px * var(--screen-size-rateo)));
	--spacing-xl: calc(64px + (64px * var(--screen-size-rateo)));
	--spacing-xxl: calc(130px + (130px * var(--screen-size-rateo))); */
}

body,
html {
	font-family: var(--font-plain);
	font-size: var(--16px);

	color: var(--color-primary);
	background: var(--color-surface);

	width: 100%;
	min-height: 100vh;
	margin: 0;
	padding: 0;
}

section {
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-regular);
	font-size: 1rem;
	line-height: 1.5;
	padding: 0;
	margin: 0;
}

.display-large {
	font-family: var(--font-brand);
	font-weight: var(--font-weight-semi-bold);
	font-size: var(--42px);

	@include md($screen-small) {
		font-size: var(--64px);
	}

	@include md($screen-medium) {
		font-size: var(--80px);
	}
}

.display-medium {
	font-family: var(--font-brand);
	font-weight: var(--font-weight-semi-bold);
	font-size: var(--36px);

}

.display-small {
	font-family: var(--font-brand);
	font-weight: var(--font-weight-semi-bold);
	font-size: var(--24px);

	@include md($screen-medium) {
		font-size: var(--28px);
	}
}

.headline-large {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-medium);
	font-size: var(--18px);


	@include md($screen-medium) {
		font-size: var(--28px);
	}
}

.headline-medium {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-regular);
	font-size: var(--16px);

	@include md($screen-small) {
		font-size: var(--20px);
	}

	@include md($screen-medium) {
		font-size: var(--24px);
	}
}

.headline-small {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-regular);
	font-size: var(--45px);
}

.title-large {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-semi-bold);
	font-size: var(--16px);

	@include md($screen-medium) {
		font-size: var(--18px);
	}
}

.title-medium {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-semi-bold);
	font-size: var(--14px);

	@include md($screen-small) {
		font-size: var(--16px);
	}
}

.title-small {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-medium);
	font-size: var(--14px);
}

.body-large {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-regular);
	font-size: var(--14px);
}

.body-medium {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-regular);
	font-size: var(--12px);

	@include md($screen-medium) {
		font-size: var(--14px);
	}
}

.body-small {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-regular);
	font-size: var(--10px);

	@include md($screen-medium) {
		font-size: var(--12px);
	}
}

.label-large {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-medium);
	font-size: var(--14px);
}

.label-medium {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-medium);
	font-size: var(--12px);
}

.label-small {
	font-family: var(--font-plain);
	font-weight: var(--font-weight-thin);
	font-size: var(--11px);
}

